--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -23,4 +23,7 @@ jobs:
         run: npm install
 
       - name: Run tests
+        run: npm test
+
+      - name: Run Tests
         run: npm test
