--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "server.js",
   "scripts": {
     "dev": "ts-node-dev ./src/server.ts",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "crypto": "^1.0.1",
@@ -18,13 +20,17 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "ts-jest": "^29.3.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
